--- a/online-casinos.html
+++ b/online-casinos.html
@@ -194,11 +194,20 @@
             <div class="container">
                 <div class="up-section__wrapper">
                     <div class="up-section__block">
-                        <div class="up-section__crochka">
-                            <a href="./">Home</a>
-                            <span> > </span>
-                            <a href="./online-casinos.html">Online Casinos</a>
-                        </div>
+                        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+							<ol itemscope itemtype="https://schema.org/BreadcrumbList">
+								<li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+								<a itemprop="item" href="/">
+									<span itemprop="name">Home</span>
+								</a>
+								<meta itemprop="position" content="1" />
+								</li>
+								<li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+								<span itemprop="name">Online Casinos</span>
+								<meta itemprop="position" content="2" />
+								</li>
+							</ol>
+						</nav>
                         <h1 class="up-section__title">
                             Best Online casinos Australia
                         </h1>
