--- a/online-casinos.html
+++ b/online-casinos.html
@@ -194,7 +194,7 @@
             <div class="container">
                 <div class="up-section__wrapper">
                     <div class="up-section__block">
-                        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+                        <nav class="breadcrumbs" aria-label="Breadcrumb">
 							<ol itemscope itemtype="https://schema.org/BreadcrumbList">
 								<li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 								<a itemprop="item" href="/">
