--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -163,7 +163,7 @@
 					<nav class="breadcrumbs" aria-label="Breadcrumb">
 							<ol itemscope itemtype="https://schema.org/BreadcrumbList">
 								<li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-								<a itemprop="item" href="/">
+								<a itemprop="item" href="./">
 									<span itemprop="name">Home</span>
 								</a>
 								<meta itemprop="position" content="1" />
