--- a/free-pokies.html
+++ b/free-pokies.html
@@ -221,54 +221,54 @@
                 </div>
                 <div class="cards-free__wrapper">
                     <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                           New Pokies 
-                        </h3>
+						</span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
                     </div>
 
                     <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                           Popular Pokies 
-                        </h3>
+                        </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
                     </div>
 
                     <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                           Table Games 
-                        </h3>
+                        </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
                     </div>
 
                      <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                           Live Dealer
-                        </h3>
+                        </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
                     </div>
 
                     <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                           Crach Pokies
-                        </h3>
+                        </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
                     </div>
 
                     <div class="card-free__item">
-                        <h3 class="card-free__title">
+                        <span class="card-free__title">
                             Pokies by Provider
-                        </h3>
+                        </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
                         </a>
