--- a/free-pokies.html
+++ b/free-pokies.html
@@ -258,7 +258,7 @@
 
                     <div class="card-free__item">
                         <span class="card-free__title">
-                          Crach Pokies
+                          Crash Pokies
                         </span>
                         <a class="card-free__btn btn-yello" href="#" >
                             Play free
