--- a/free-pokies.html
+++ b/free-pokies.html
@@ -312,7 +312,7 @@
 						</div>
 
 						<div class="hot-offers__card">
-							<img src="./img/hot/axe.png" alt="hot-offers" />
+							<img src="./img/hot/neospin.png" alt="hot-offers" />
 							<div class="hot-offers__card-info">
 								<span>Welcome Bonus</span>
 								<span>GET UP TO AU$5,625</span>
