--- a/free-pokies.html
+++ b/free-pokies.html
@@ -349,12 +349,122 @@
 								<a class="hot-offers__card-link btn-yello" href="#">Claim Bonus</a>
 							</div>
 						</div>
-
-
 					</div>
 				</div>
 			</div>
 		</section>
+		<section class="text-block section">
+			<div class="container">
+				<div class="wrapper__text-block">
+					<h2 class="title__text-block">How to play free pokies on pokies24.io</h2>
+					<p class="text__text-block last__element-text-block">
+						Getting started is easier than falling off a log. First you pick a game that looks good. You can filter pokies by type so finding your favourite is easy. Maybe you're after a classic game or a modern video slot. Another great option is to pick your favourite provider. If you love a particular developer you can quickly filter their catalogue. After that choose the slot you want, and you'll be good to go. It's all about finding the free pokies no download options you enjoy most.
+					</p>
+
+					<h2 class="title__text-block">Why you should try Free Pokies</h2>
+					<p class="text__text-block">
+						There are plenty of reasons why free pokies are the goods. They're a brilliant way to test out new casino games. You can check the rules, paylines, and bonus features first. This way you understand the game completely before playing online pokies Australia real money. You can learn about things like volatility and RTP. It's risk free entertainment that doesn't cost you a cent. Practising for free can definitely help your confidence. The fun factor is still there even though no real money is involved.
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="practical section">
+			<div class="container">
+				<div class="practical__wrapper">
+					<h2 class="practical__title">
+						How Online Pokies Work
+					</h2>
+					<p class="practical__text">
+						Online slots Australia may look complicated but actually they run on a few simple principles. The machine is essentially a computer program. Every spin is governed by a mathematical model. Understanding it helps you understand the happenings behind the screen. It ensures the game is random and fair. This whole system guarantees a level playing field for every punter.
+					</p>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M11 10.1384V6H18V25H13.5018V10.1384H11Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>RTP.</strong>
+							RTP stands for Return to Player. This percentage shows the money returned to players over time. A good example is 96% RTP means $96 is returned for every $100 bet. This figure is calculated over millions of spins. It is a long-term theoretical average, not a guarantee for one session. The higher the RTP, the better the theoretical return.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M9.05159 20.7215C9.63624 20.2568 9.90278 20.0417 9.85119 20.0761C11.5364 18.6821 12.8604 17.5376 13.8234 16.6427C14.8036 15.7477 15.629 14.8098 16.2996 13.8288C16.9702 12.8478 17.3056 11.8927 17.3056 10.9633C17.3056 10.2577 17.1422 9.70697 16.8155 9.31114C16.4888 8.91531 15.9987 8.71739 15.3452 8.71739C14.6918 8.71739 14.1759 8.96694 13.7976 9.46603C13.4365 9.94792 13.256 10.6363 13.256 11.5313H9C9.03439 10.0684 9.34392 8.84647 9.92857 7.86549C10.5304 6.88451 11.3128 6.16168 12.2758 5.69701C13.256 5.23234 14.3393 5 15.5258 5C17.5721 5 19.1111 5.52491 20.1429 6.57473C21.1918 7.62455 21.7163 8.99275 21.7163 10.6793C21.7163 12.5208 21.0886 14.2332 19.8333 15.8166C18.578 17.3827 16.9788 18.9144 15.0357 20.4117H22V24H9.05159V20.7215Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Volatility.</strong>
+							Volatility is sometimes called variance. It tells you about the risk involved in a pokie. Low volatility slots pay out more often but with smaller wins. High volatility slots pay out less frequently. However when they hit the wins can be much larger. Medium volatility is a balance of the two extremes. Your personal playing style should influence your choice. Some players prefer frequent small wins for a longer game. Others chase the big rare payday.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M8.84785 11.2284C8.91084 9.42848 9.46203 8.04069 10.5014 7.06504C11.5408 6.08939 12.9502 5.60156 14.7297 5.60156C15.9108 5.60156 16.9187 5.82024 17.7534 6.25761C18.6038 6.69497 19.2416 7.29213 19.6667 8.04911C20.1077 8.80608 20.3282 9.65557 20.3282 10.5976C20.3282 11.7078 20.0683 12.6162 19.5486 13.3227C19.029 14.0124 18.4227 14.4834 17.7297 14.7357V14.8366C18.6274 15.1562 19.336 15.6861 19.8557 16.4263C20.3754 17.1664 20.6353 18.1168 20.6353 19.2775C20.6353 20.3205 20.4069 21.2457 19.9502 22.0531C19.5093 22.8437 18.8557 23.4661 17.9896 23.9203C17.1392 24.3745 16.1234 24.6016 14.9423 24.6016C13.0526 24.6016 11.5408 24.1053 10.4069 23.1129C9.2888 22.1204 8.69825 20.6233 8.63525 18.6215H12.5565C12.5723 19.3616 12.7691 19.9504 13.1471 20.3878C13.525 20.8083 14.0762 21.0186 14.8006 21.0186C15.4148 21.0186 15.8872 20.8335 16.2179 20.4634C16.5644 20.0766 16.7376 19.5719 16.7376 18.9495C16.7376 18.1421 16.4935 17.5617 16.0053 17.2085C15.5329 16.8384 14.7691 16.6534 13.714 16.6534H12.9581V13.1461H13.714C14.5171 13.1461 15.1628 13.0031 15.651 12.7171C16.1549 12.4143 16.4069 11.8844 16.4069 11.1275C16.4069 10.5219 16.2494 10.0509 15.9345 9.71444C15.6195 9.37801 15.1864 9.2098 14.6353 9.2098C14.0368 9.2098 13.588 9.40324 13.2888 9.79014C13.0053 10.177 12.84 10.6565 12.7927 11.2284H8.84785Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>RNG.</strong>
+							RNG means Random Number Generator. It is a computer program that ensures fairness. It constantly generates random numbers. The RNG stops on a number when you press the spin button. That number determines which symbols appear on the reels. Every single spin is independent of the last one. It ensures results are genuinely random. The RNG is the heart of a fair online pokie.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M6 21.5694V17.9278L14.584 6H19.7725V17.6639H22V21.5694H19.7725V25H15.1273V21.5694H6ZM15.4533 10.9611L10.8896 17.6639H15.4533V10.9611Z" fill="#00192B"/>
+						</svg>
+
+						<p class="practical__element-text">
+							<strong>Paylines.</strong>
+							 Paylines are the paths across the reels. They show where matching symbols must land to win. Classic pokies might only have one to five lines. Modern video slots often have many more, like 20, 50, or even thousands. A win is generally paid from the leftmost reel to the right. Some paylines zigzag across the screen. You usually need three or more matching symbols on a line. The more paylines you bet on the higher your total stake.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg
+							width="30"
+							height="30"
+							viewBox="0 0 30 30"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<circle cx="15" cy="15" r="15" fill="#FFD700" />
+							<path
+								d="M20.8627 9.89877H12.4139V13.4856C12.775 13.1044 13.2805 12.7925 13.9304 12.5499C14.5803 12.3073 15.2843 12.186 16.0426 12.186C17.3965 12.186 18.5158 12.4806 19.4004 13.0698C20.303 13.6589 20.962 14.4213 21.3772 15.357C21.7924 16.2928 22 17.3064 22 18.3981C22 20.4254 21.4043 22.0369 20.2128 23.2326C19.0213 24.4109 17.3424 25 15.176 25C13.7318 25 12.4771 24.7661 11.412 24.2982C10.3469 23.813 9.52547 23.1459 8.94778 22.2969C8.37008 21.4478 8.05416 20.4688 8 19.3598H12.5222C12.6306 19.8969 12.8923 20.3475 13.3075 20.7114C13.7228 21.0579 14.2914 21.2312 15.0135 21.2312C15.862 21.2312 16.4939 20.9713 16.9091 20.4514C17.3243 19.9316 17.5319 19.2385 17.5319 18.3721C17.5319 17.523 17.3153 16.8732 16.882 16.4227C16.4487 15.9722 15.8169 15.7469 14.9865 15.7469C14.3727 15.7469 13.8672 15.8942 13.47 16.1888C13.0729 16.466 12.8111 16.8386 12.6847 17.3064H8.21663V6H20.8627V9.89877Z"
+								fill="#00192B"
+							/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Reels & Rows.</strong>
+							 Reels are the vertical columns that spin. Rows are the horizontal positions on those columns. The most common setup is five reels with three rows. This is known as a 5x3 grid. Some classic pokie machines have three reels and three rows. Others use much larger grids, like 6x4 or more. The number of reels and rows affects the gameplay. More positions mean more potential winning combinations.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M17.2084 11.3778C17.0656 10.7521 16.8158 10.2871 16.4589 9.98265C16.102 9.66133 15.5934 9.50067 14.9331 9.50067C13.9159 9.50067 13.1842 9.92345 12.738 10.769C12.2919 11.5977 12.0599 12.9168 12.0421 14.7263C12.4347 14.1344 12.9968 13.6693 13.7285 13.3311C14.478 12.9929 15.2989 12.8238 16.1912 12.8238C17.9401 12.8238 19.341 13.348 20.3939 14.3965C21.4646 15.445 22 16.9079 22 18.785C22 20.0196 21.7323 21.1019 21.1969 22.032C20.6794 22.9622 19.912 23.6894 18.8948 24.2136C17.8955 24.7379 16.7087 25 15.3346 25C12.5864 25 10.6769 24.1883 9.60612 22.5648C8.53537 20.9243 8 18.5737 8 15.5127C8 12.2995 8.56214 9.915 9.68642 8.35915C10.8286 6.78638 12.6488 6 15.1472 6C16.4857 6 17.6099 6.25367 18.5201 6.76102C19.4481 7.25145 20.144 7.90254 20.608 8.71429C21.0899 9.52604 21.3754 10.4139 21.4646 11.3778H17.2084ZM15.0937 16.2483C14.3263 16.2483 13.6839 16.4682 13.1663 16.9079C12.6667 17.3307 12.4168 17.9395 12.4168 18.7343C12.4168 19.5461 12.6488 20.1802 13.1128 20.6369C13.5946 21.0935 14.2728 21.3218 15.1472 21.3218C15.9324 21.3218 16.5481 21.1019 16.9943 20.6622C17.4583 20.2056 17.6902 19.5883 17.6902 18.8104C17.6902 18.0156 17.4672 17.3899 17.021 16.9332C16.5749 16.4766 15.9324 16.2483 15.0937 16.2483Z" fill="#00192B"/>
+						</svg>
+
+						<p class="practical__element-text">
+							<strong>Stake.</strong>
+							 The stake is simply the amount of money you bet per spin. It is also sometimes called the total bet. You can usually adjust the stake level before each spin. It is essential to know your stake before hitting the spin button. Even with free pokie slots, the stake button is still there. Pretended that you are using real money and play responsibly.
+						</p>
+					</div>
+					<div class="practical__element">
+						<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="15" cy="15" r="15" fill="#FFD700"/>
+							<path d="M22.3545 9.52486L15.5988 25.2148H10.8887L17.7251 10.0201H9.35449V6.21484H22.3545V9.52486Z" fill="#00192B"/>
+						</svg>
+						<p class="practical__element-text">
+							<strong>Choose providers you trust.</strong> If you enjoy a
+							certain game style, look for casinos that list Aristocrat, NetEnt
+							or Pragmatic Play in their catalogue.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+
 	
 		<section class="providers">
 			<div class="container">
