--- a/free-pokies.html
+++ b/free-pokies.html
@@ -445,7 +445,9 @@
 
 						<p class="practical__element-text">
 							<strong>Stake.</strong>
-							 The stake is simply the amount of money you bet per spin. It is also sometimes called the total bet. You can usually adjust the stake level before each spin. It is essential to know your stake before hitting the spin button. Even with free pokie slots, the stake button is still there. Pretended that you are using real money and play responsibly.
+							The stake is simply the amount of money you bet per spin. It is also sometimes called the total bet. You can usually
+							adjust the stake level before each spin. It is essential to know your stake before hitting the spin button. Even with
+							free pokie slots, the stake button is still there. Pretended that you are using real money and play responsibly.
 						</p>
 					</div>
 					<div class="practical__element">
