--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							demos to help you find the right game before you play for real
 							money.
 						</p>
-						<a class="main__btn btn-yello" href="https://pokies24.io/online-casinos"> Casinos We Recommend </a>
+						<a class="main__btn btn-yello" href="./online-casinos"> Casinos We Recommend </a>
 
 					</div>
 				</div>
