--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@
                         <div class='contact-form__checkBocks'>
                             <label class="switch">
                                 <input type="checkbox">
-                                <span class="slider"></span>
+                                <span class="slider-checkbox"></span>
                             </label>
                             <span class="terms-text">
                                 I accept <a href="./terms-conditions" class="text__line-block">Terms & Conditions</a>
