--- a/online-casinos.html
+++ b/online-casinos.html
@@ -221,9 +221,9 @@
         <section class="best-casinos section fisrt-section">
             <div class="container">
                 <div class="best-casinos__wrapper">
-                    <h2 class="best-casinos__title">
+                    <span class="best-casinos__title">
                         Best Online Casinos
-                    </h2>
+                    </span>
                     <div class="best-casinos__block">
                         <div class="best-casinos__btns best-casinos__filter">
                             <button class="best-casinos__btn" data-filter="best-online-casinos-au">
