--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
-
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content="Review how pokies24.io collects and processes user data, including newsletter subscriptions and analytics. Learn what information we store, how it’s protected, and how users can manage their data preferences.">
 		<title>Privacy Policy & Data Collection on Pokies24.io</title>
 	</head>
