--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
     <meta name="description"
         content="Have questions about online pokies, casino bonuses, or demo games? Reach out to the Pokies24.io team via contact form, email, or Telegram. We’re here to help players from Australia and beyond.">
     <title>Contact Us | Pokies24.io</title>
