--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content="Play top-rated free online pokies in Australia without registration. Read honest reviews, try free demos, and choose the right game for real money.">
 		<title>Best Online Pokies in Australia | Free Demos & Casino Reviews</title>
 		<script type="application/ld+json">
