--- a/online-casinos.html
+++ b/online-casinos.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/online-casinos.css" />
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content="See what bonuses are given, which pokies are trendy on each casino, and read our expert reviews along with real user feedback.">
 		<title>Best Online Casinos Australia Listing | Reviews & Offers</title>
 		<script type="application/ld+json">
