--- a/responsible-gambling.html
+++ b/responsible-gambling.html
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content="Read how pokies24.io promotes responsible gambling. Learn about potential risks, signs of problem gambling, and where to find confidential help in Australia. All content is for users 18+.">
 		<title>Responsible Gambling | Pokies24.io</title>
 	</head>
