--- a/disclaimer.html
+++ b/disclaimer.html
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content=" Read our disclaimer to understand affiliate relationships, legal responsibility, and accuracy of published information.">
 		<title>Disclaimer | Content Responsibility - Pokies24.io</title>
 	</head>
