--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" href="./img/favicon_pokies.svg" type="image/x-icon" />
 		<meta name="description" content="Read the full terms and conditions of pokies24.io. Learn how we operate, how our content should be used, and what responsibilities apply when using our site.">
 		<title>Terms and Conditions | Pokies24.io Usage Policies </title>
 	</head>
