--- a/free-pokies.html
+++ b/free-pokies.html
@@ -255,13 +255,6 @@
 									Crash Games
 								</button>
 
-								<button class='game-all__slider-item'>
-									Live Dealer
-								</button>
-								
-								<button class='game-all__slider-item'>
-									Crash Games
-								</button>
 
 							</div>
 						</div>
@@ -446,8 +439,42 @@
 					</div>
 				</div>
 				</div>
+				<div class="game-all__list-item">
+					
+					<div class="game-all__item-game">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
+					<div class="game-all__item-game">
+						<img src="./img/slide/moon.webp" alt="games" />
+						<span>Autumn Moon</span>
+					</div>
 
-
+				</div>
 			   </div>
             </div>
         </section>
