--- a/free-pokies.html
+++ b/free-pokies.html
@@ -252,7 +252,7 @@
 								</button>
 								
 								<button class='game-all__slider-item'>
-									Crash Games
+									Crash Pokies
 								</button>
 
 
