--- a/free-pokies.html
+++ b/free-pokies.html
@@ -231,6 +231,7 @@
 						</button>
 						<div class="game-all__slider">
 							<div class='game-all__slider-wrapper'>
+
 								<button class='game-all__slider-item'>
 									All games
 								</button>
@@ -254,7 +255,6 @@
 								<button class='game-all__slider-item'>
 									Crash Pokies
 								</button>
-
 
 							</div>
 						</div>
@@ -440,38 +440,47 @@
 				</div>
 				</div>
 				<div class="game-all__list-item">
-					
 					<div class="game-all__item-game">
+						<div class="game-all__item-content">
 							<img src="./img/slide/moon.webp" alt="games" />
 							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
-					</div>
-					<div class="game-all__item-game">
-						<img src="./img/slide/moon.webp" alt="games" />
-						<span>Autumn Moon</span>
+						<div class="game-all__item-content">
+							<img src="./img/slide/moon.webp" alt="games" />
+							<span>Autumn Moon</span>
+						</div>
 					</div>
 
 				</div>
