--- a/free-pokies.html
+++ b/free-pokies.html
@@ -231,7 +231,6 @@
 						</button>
 						<div class="game-all__slider">
 							<div class='game-all__slider-wrapper'>
-
 								<button class='game-all__slider-item'>
 									All games
 								</button>
@@ -444,6 +443,9 @@
 						<div class="game-all__item-content">
 							<img src="./img/slide/moon.webp" alt="games" />
 							<span>Autumn Moon</span>
+						</div>
+						<div class="game-all__item-hover">
+							<a class="game-all__item-link btn-yello" href="#">Play Demo</a>
 						</div>
 					</div>
 					<div class="game-all__item-game">
